# Lab-Hooks

./: MIGRATION_PLAN.md  settings.gradle.kts
.github/workflows/: build-zygisk.yml  build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  companion.cpp  companion_io.h  companion_protocol.h  config_loader.cpp  ds_state.h  java_hooks.cpp  lsplant_init.cpp  lsplant_wrapper.cpp  native_hooks.cpp  zygisk.hpp  zygisk_entry.cpp  zygisk_main.cpp
app/src/main/cpp/include/: zygisk.hpp
app/src/main/java/com/devicespooflab/hooks/: HookEntry.java  LSPlantJavaWrapper.java  MainActivity.java  MainHook.java  NativeHooks.java  ZygiskEntry.java  ZygiskMethodHook.java
app/src/main/java/com/devicespooflab/hooks/hooks/: AccountHooks.java  AdvertisingIdHooks.java  AppSetIdHooks.java  BatteryHooks.java  BuildHooks.java  CameraHooks.java  DisplayHooks.java  EuiccHooks.java  HardwareHooks.java  InputDeviceHooks.java  LocaleHooks.java  MediaDrmHooks.java  NetworkHooks.java  PackageInfoHooks.java  PackageManagerHooks.java  SensorHooks.java  SettingsHooks.java  StorageHooks.java  SystemPropertiesHooks.java  TelephonyHooks.java  WebViewHooks.java
app/src/main/java/com/devicespooflab/hooks/utils/: ConfigManager.java  XposedServiceBridge.java  ZygiskConfigBridge.java
app/src/main/java/com/devicespooflab/hooks/xposed/: LoadPackageParam.java  LspHooker.java  XC_MethodHook.java  XposedBridge.java  XposedHelpers.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
docs/: live-update-design.md
magisk_module/: module.prop
module/: customize.sh  module.prop  post-fs-data.sh  service.sh
